# bazis-async-request

./: README.md  pyproject.toml  pytest.ini
bazis/contrib/async_request/: __init__.py  apps.py  middleware.py  schemas.py  tasks.py  utils.py
sample/: Dockerfile  docker-compose.kafka.yml  docker-compose.test.yml  manage.py  project.env  pyproject.toml  test.env
sample/fast_start/: admin.py  models.py  router.py  routes.py  schemas.py
sample/fast_start/migrations/: 0001_initial.py  0002_remove_order_fast_start__autogen_8f29b0_gin_and_more.py
sample/sample/: main.py  router.py  settings.py  urls.py  wsgi.py
sample/users/: admin.py  models.py
sample/users/migrations/: 0001_initial.py
tests/: conftest.py  test_decorator.py  test_multiple_order_requests.py  test_order_access.py  test_order_patch.py  test_order_view.py  test_shop_calc_and_params.py  test_shop_force_background_methods.py
