[project]
name = "sample"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "bazis-async-request",
    "bazis-author",
    "bazis-permit",
    "bazis-test-utils",
]

[tool.uv.sources]
bazis-async-request = { path = "../", editable = true }

[tool.pytest.ini_options]
django_settings_module = "sample.settings"

